Remove unneeded files from FindTransaction